@@ -25,11 +25,11 @@
 		<RegExp input="$$5" output="&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot;?&gt;&lt;results&gt;\1&lt;/results&gt;" dest="8">
 			<!-- Add new link style to Search result (http://www.mymovies.it/film/<year>/<film_name>/) -->
 			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2 \3&lt;/title&gt;&lt;url cache=&quot;main.html&quot;&gt;\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5">
-				<expression repeat="yes" cs="true">&lt;h3 class=&quot;r&quot;&gt;&lt;a href=&quot;(http://www\.mymovies\.it/film/[0-9]{4}/[^/]+/)&quot; class=l&gt;(.+?)(?: +- +MYmovies)?(?: +\| +MYmovies)?&lt;/a&gt;&lt;/h3&gt;&lt;div class=&quot;s&quot;&gt;(?(?=Un film di )Un film di (.+?) con)</expression>
+				<expression repeat="yes" cs="true">&lt;h3 class=&quot;r&quot;&gt;&lt;a href=&quot;(http://www\.mymovies\.it/film/[0-9]{4}/[^/]+/)&quot; class=l&gt;(.+?)(?: +- +MYmovies)?(?: +\| +MYmovies)?&lt;/a&gt;&lt;/h3&gt;</expression>
 			</RegExp>
 			<!-- Add OLD link style to Search result (www.mymovies.it/dizionario/recensione.asp?id=[0-9]) -->
 			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2 \3&lt;/title&gt;&lt;url cache=&quot;main.html&quot;&gt;\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;/entity&gt;" dest="5+">
-				<expression repeat="yes" cs="true">&lt;h3 class=&quot;r&quot;&gt;&lt;a href=&quot;(http://www\.mymovies\.it/dizionario/recensione\.asp\?id=[^&quot;]+)&quot; class=l&gt;(.+?)(?: +- +MYmovies)?(?: +\| +MYmovies)?&lt;/a&gt;&lt;/h3&gt;&lt;div class=&quot;s&quot;&gt;(?(?=Un film di )Un film di (.+?) con)</expression>
+				<expression repeat="yes" cs="true">&lt;h3 class=&quot;r&quot;&gt;&lt;a href=&quot;(http://www\.mymovies\.it/dizionario/recensione\.asp\?id=[^&quot;]+)&quot; class=l&gt;(.+?)(?: +- +MYmovies)?(?: +\| +MYmovies)?&lt;/a&gt;&lt;/h3&gt;</expression>
 			</RegExp>
 			<expression noclean="1" />
 		</RegExp>
@@ -278,7 +278,7 @@
 			</RegExp>
 			<!-- I can't use pulbic function GetIMDBRatingById :( -->
 		   	<RegExp input="$$1" output="&lt;rating&gt;\1&lt;/rating&gt;&lt;votes&gt;\2&lt;/votes&gt;" dest="6+">
-				<expression>&lt;span class=&quot;rating-rating&quot;&gt;([0-9.]+).*?&gt;([0-9,]+) votes&lt;/a&gt;</expression>
+				<expression>&lt;span itemprop=&quot;ratingValue&quot;&gt;([0-9.]+).*?&gt;.*?title=&quot;([0-9,]+)\s</expression>
 			</RegExp>
 		   <expression noclean="1"/>
 		</RegExp>
