@@ -1,3 +1,6 @@
+[B]1.1.6[/B]
+- Fixed regex: GetSearchResults, ParseImdbData (rating)
+
 [B]1.1.5[/B]
 - Fixed regex: trailer
 
